--- a/Equilibrium/Views/Shared/_Layout.cshtml
+++ b/Equilibrium/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                 </div>
             </div>
         </nav>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/sortable-table/sortable-table.js"></script>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -40,7 +42,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
