Elaborazione ulteriore sul modello per il filtro

--- a/Equilibrium/Views/Home/Index.cshtml
+++ b/Equilibrium/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div class="text-center p-4">
-    <a asp-controller="Table">Sortable Table</a>
+    <a asp-controller="SortableTable">Sortable Table</a>
 </div>
